<resources>
    <string name="app_name">Spirala4-17796</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Kategorije">Kategorije</string>
    <string name="Autori">Autori</string>
    <string name="Pretraga">Pretraga</string>
    <string name="Dodaj_Kategoriju">Dodaj Kategoriju</string>
    <string name="Dodaj_Knjigu">Dodaj Knjigu</string>
    <string name="Povratak">Povratak</string>
    <string name="Ime_Pisca">Ime Pisca</string>
    <string name="Naziv_Knjige">Naziv Knjige</string>
    <string name="Nadji_Sliku">Nadji Sliku</string>
    <string name="Ponisti">Ponisti</string>
    <string name="Toast_poruka_dodavanje_knjige">Knjiga uspjesno dodana!</string>
    <string name="Servis_pokrenut">Servis je pokrenut</string>
    <string name="Greska_u_prikupljanju">Greska u prikupljanju podataka</string>
    <string name="Odaberite_knjigu">Odaberite knjigu</string>
    <string name="Odaberite_kategoriju">Odaberite kategoriju</string>
    <string name="Dodaj_online">Dodaj knjigu online</string>
    <string name="Posalji_Preporuku">Posalji preporuku</string>
    <string name="Odobri_permisiju">Dok ne odobrite pristup kontaktima, ne mozemo prikazati njihove mailove!</string>
    <string name="Nijedan_nije_instaliran">Nijedan email klijent nije instaliran</string>
    <string name="Preporuci">Preporuci</string>
</resources>
