<?xml version="1.0" encoding="utf-8"?>


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ba.unsa.etf.rma.adnan_brdjanin.spirala1.KategorijeAkt">

        <Button
            android:id="@+id/dKategorije"
            android:layout_width="115dp"
            android:layout_height="52dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:text="@string/Kategorije"
            app:layout_constraintBottom_toTopOf="@+id/dDodajKnjigu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintVertical_bias="0.00" />

        <Button
            android:id="@+id/dDodajOnline"
            android:layout_height="58dp"
            android:layout_width="160dp"
            android:text="@string/Dodaj_online"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="2dp"
            app:layout_constraintBottom_toTopOf="@+id/dKategorije"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintVertical_bias="0.00" />


        <Button
            android:id="@+id/dAutori"
            android:layout_width="107dp"
            android:layout_height="52dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/Autori"
            app:layout_constraintBottom_toTopOf="@+id/dDodajKnjigu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
        <Button
            android:id="@+id/dPretraga"
            android:layout_width="97dp"
            android:layout_height="47dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="50dp"
            android:text="@string/Pretraga"
            app:layout_constraintBottom_toTopOf="@+id/dDodajKnjigu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.888" />

        <Button
            android:id="@+id/dDodajKategoriju"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:text="@string/Dodaj_Kategoriju"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/dDodajKnjigu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="100dp"
            android:text="@string/Dodaj_Knjigu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tekstPretraga"
            android:layout_width="240dp"
            android:layout_height="42dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="65dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/dDodajKategoriju"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.571" />

        <ListView
            android:id="@+id/listaKategorija"
            android:layout_width="368dp"
            android:layout_height="350dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

