<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentOnline">

    <Spinner
        android:id="@+id/sKategorije"
        android:layout_width="271dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/dRun"
        app:layout_constraintEnd_toStartOf="@+id/dAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sRezultat"
        app:layout_constraintVertical_bias="0.0" />
    <EditText
        android:id="@+id/tekstUpit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/dRun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />
    <Spinner
        android:id="@+id/sRezultat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="130dp"
        app:layout_constraintBottom_toTopOf="@+id/dRun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>
    <Button
        android:id="@+id/dRun"
        android:text="@string/Pretraga"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toTopOf="@+id/dRun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <Button
        android:id="@+id/dAdd"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Dodaj_Knjigu"
        app:layout_constraintBottom_toTopOf="@+id/dRun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sRezultat"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/dPovratak"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="210dp"
        android:text="@string/Povratak"
        app:layout_constraintBottom_toTopOf="@+id/dAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sKategorije"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>